<resources>
    <string name="app_name">DropOfLife</string>
    <string name="facebook_app_id">3508661939228468</string>
    <string name="fb_login_protocol_scheme">fb3508661939228468</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="call_me">Call us</string>
    <string name="chat">Chat</string>
    <string name="filter">Filter</string>
    <string name="req_blood">Request Blood</string>
    <string name="Login">Login</string>
    <string name="wel_msg2">Welcome to a drop of life, here you can donate blood to patients in need</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="first">First name</string>
    <string name="last">Last name</string>
    <string name="bdate">Birth Date </string>
    <string name="gender">Gender</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dont_have">Don\'t have an account? </string>
    <string name="signup_txt">Sign Up</string>
    <string name="error_email">Wrong Pattern,Check your email plz</string>
    <string name="error_pass">Password must be more than 8 letters</string>
    <string name="or_sign_in_using">Or Sign In Using</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="share">share</string>
    <string name="sign_up_successfully">User signed up successfully</string>
    <string name="sign_up_unsuccessfully">User signed up error</string>
    <string name="selct_sex">Chose a gender </string>
    <string name="select_blood">select blood type</string>
    <string name="enter_full_name_error">full name is REQUIRED.</string>
    <string name="enter_email_error">email is REQUIRED.</string>
    <string name="enter_password_error">password is REQUIRED.</string>
    <string name="enter_confirm_password_error">Confirm  password is REQUIRED.</string>
    <string name="enter_BirthDate_error">Birth date is REQUIRED.</string>
    <string name="enter_date">Enter Date</string>
    <string name="error_during_blood_selection">error during blood selection</string>
    <string name="error_password_length_incorrect">please make sure that the password is 8 to 16 characters</string>
    <string name="error_password_did_not_match">password did not match </string>
    <string-array name="bloodtypes">String bloodTypes []
        ={"A+","A-","B+","B-","O+","O-","AB+","AB-","Unknown"};
        <item> A+ </item>
        <item> A- </item>
        <item> B+ </item>
        <item> B- </item>
        <item> O+ </item>
        <item> O- </item>
        <item> AB+ </item>
        <item> AB- </item>
        <item> Unknown!</item>
    </string-array>

    <string name="error_younger_than_the_legal_age">Younger than the legal age </string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="google">google</string>
    <string name="our_logo">our_logo</string>
    <string name="gender_with">Gender :</string>
    <string name="register">Register</string>
    <string name="what_s_your_blood_type">Blood Type?</string>
    <string name="username">UserName</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="additional_ino">additional info</string>
    <string name="ab">AB+</string>
    <string name="settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="deleting">Deleting</string>
    <string name="your_location">Hospital Name</string>
    <string name="where_is_your_location">Location: </string>
    <string name="what_blood_type_do_you_need">Blood Type: </string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_number_without">Phone Number</string>
    <string name="additional_information">If you have any additional information such as Sickness, Health Problems or any specific details, please list below:</string>
    <string name="add_request">Add Request</string>
    <string name="you_can_donate">you can donate now</string>
    <string name="days_remaining">Days remaining</string>
    <string name="days_remaining_you_can_donate">Days remaining / you can donate</string>
    <string name="blood_tpye">Blood type</string>
    <string name="donations">Donations</string>
    <string name="i_just_donated">I just donated</string>

    <string-array name="provinces">
        <item>Amman</item>
        <item>Irbid</item>
        <item>Ajloun</item>
        <item>Jerash</item>
        <item>Mafraq</item>
        <item>Balqa</item>
        <item>Zarqa</item>
        <item>Madaba</item>
        <item>Karak</item>
        <item>Tafilah</item>
        <item>Aqaba</item>
    </string-array>
    <string name="upload_successful">upload successful</string>
    <string name="upload_not_successful">failed try again later</string>
    <string name="uploading">uploading</string>
    <string name="log_out">Log out</string>
    <string name="dark_mode">Dark mode</string>
    <string name="Reset_password">Reset_password</string>
    <string name="enter_email_to_receive_link">enter email to receive reset password link</string>
    <string name="Okay">Okay</string>
    <string name="cancel">cancel</string>
    <string name="reset_password_email_has_been_sent">reset password email has been sent</string>
    <string name="error_reset_password_email_">  error: could not send the reset password email </string>
    <string name="hospital_name">Hospital name</string>
    <string name="address">Address</string>
    <string name="select_logo">Select Logo</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZHJvcG9mbGlmZWFwcCIsImEiOiJja2hkbG16d28wMzVvMnFuNWF1MzByYjNtIn0.9h7IFdGELC-EUcgUaxaybw</string>
    <string name="saveHospital">Save Hospital</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="select_Location">Select Location</string>
    <string name="selected_place_info" translatable="false">Selected location information:\n%1$s</string>
    <string name="Fail_in_select_img">Failed to select an image</string>
    <string name="Admin">Admin</string>
    <string name="role">Role</string>
    <string name="select_hosptial">Select hosptial</string>
    <string name="changeRole">Change role</string>
    <string name="save">Save Changes</string>
    <string name="alertmsg">Sorry we can\'t use this feature until we publish our app on Google play store</string>
    <string name="add_hospital">Add a new hospital</string>
    <string name="search_by_email">search users by email</string>


</resources>
