<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHospital">

    <EditText
        android:id="@+id/HospitalNameET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_baseline_local_hospital_24"
        android:drawableLeft="@drawable/ic_baseline_local_hospital_24"
        android:hint="@string/hospital_name"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText

        android:id="@+id/HospitalPhoneNumberET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HospitalNameET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_phone_red"
        android:drawableLeft="@drawable/ic_phone_red"
        android:hint="@string/phone_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/building_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HospitalPhoneNumberET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_location_building"
        android:drawableLeft="@drawable/ic_location_building"
        android:hint="@string/address" /><![CDATA[


    / android:visibility="invisible" />










    ]]>

    <ImageView
        android:id="@+id/addHospitalLogoImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/building_address"
        android:layout_alignParentStart="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/imageborder" />

    <Button
        android:id="@+id/addHospitalLogoButton"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_below="@id/building_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/button"
        android:onClick="selectLogo"
        android:text="@string/select_logo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/bttnTxt" />

    <Button
        android:id="@+id/go_to_picker_button"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_below="@id/addHospitalLogoButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:onClick="selectLocation"
        android:text="@string/select_Location"
        android:textAllCaps="false"
        android:textColor="@color/bttnTxt" />

    <LinearLayout
        android:id="@+id/geographicalLocationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/go_to_picker_button"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/latitudeET"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/latitude" />

        <EditText
            android:id="@+id/longitudeET"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/longitude" />
    </LinearLayout>

    <Button
        android:id="@+id/saveHospital"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_below="@id/geographicalLocationLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:text="@string/saveHospital"
        android:textAllCaps="false"
        android:textColor="@color/bttnTxt" />


</RelativeLayout>