<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        tools:context=".AddRequest">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/splashlogo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/what_blood_type_do_you_need"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/req_blood_Type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />
        </LinearLayout>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/textspace"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/additional_information"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:padding="5dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="40dp"
            android:background="#60bb0a1e"
            android:paddingTop="1000dp" />

        <Button
            android:id="@+id/addRequest"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/add_request" />
    </LinearLayout>
</ScrollView>